Video confirmed working

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
         "browserslist",
         "nasaapi",
         "nasaphoto",
+        "nasavideo",
         "wireframe",
         "wireframes"
     ]
